# clawcrawl

./: .env.example  .gitignore  README.md  easy_test.py  pyproject.toml
.cursor/skills/python-best-practice/: SKILL.md
.opencode/skills/python-best-practice/: SKILL.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConfigButton.tsx  CopyButton.tsx  CrawlApp.tsx  DescribeWhisper.tsx  EmptyState.tsx  HealthDot.tsx  ImageInsight.tsx  MarkdownDoc.tsx  ModelConfigPanel.tsx  PaperSheet.tsx  StepRail.tsx  UrlBar.tsx
frontend/src/hooks/: useCrawlStream.ts  useModelConfig.ts
frontend/src/lib/: crawl-steps.ts  image-desc.ts  model-config.ts  types.ts
src/clawcrawl/: __init__.py  api.py  config.py  events.py  log.py  main.py  models.py  pipeline.py  url_sanitize.py
src/clawcrawl/llm/: __init__.py  client.py
src/clawcrawl/prompts/: __init__.py  loader.py
src/clawcrawl/prompts/describe_one/: system.md  user.md
src/clawcrawl/prompts/extract_image_links/: system.md  user.md
src/clawcrawl/services/: __init__.py  describe.py  image_filter.py  image_links.py  image_urls.py  replace.py  scrape.py
src/clawcrawl/telemetry/: __init__.py  langfuse.py  llm_obs.py  serialize.py
tests/: test_api.py  test_config.py  test_config_models.py  test_events.py  test_image_filter.py  test_llm_obs.py  test_models.py  test_prompts.py  test_replace.py  test_stream.py  test_url_sanitize.py
