[project]
name = "clawcrawl"
version = "0.1.0"
description = "Multi-modal crawler: URL → markdown with image descriptions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "firecrawl-py>=2.0.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
  "instructor>=1.7.0",
  "openai>=1.55.0",
  "langfuse>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawcrawl"]

[tool.hatch.build.targets.wheel.force-include]
"src/clawcrawl/prompts" = "clawcrawl/prompts"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]